# evansplot

./: .gitignore  MANIFEST.in  README.md  evansplot.py  pyproject.toml  test.txt
examples/: example_ndvi.py  gcm.ipynb  gcm_ds.ipynb  ndvi.ipynb  sresa.ipynb
src/evansplot/: __init__.py  plotters.py
src/evansplot/data/: __init__.py
tests/: test.ipynb
