[project]
name = "evansplot"
authors = [{ name = "Stefan Gregory", email = "stefan.gregory@gmail.com" },
           { name = "Jason Evans", email = "jason.evans@unsw.edu.au" }]
description = "A Python plotting library for visualising two variables simultaneously using hue and saturation"
readme = "README.md"
keywords = ["plotting", "visualisation", "map", "variables", "hue", "saturation"]
dynamic = ["version"]
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.6",
    "cartopy",
    "xarray",
]
requires-python = ">= 3.11"

